  - allow showing both terrain and RASP
  - RASP download from various well-known providers
  - show satellite images from pc_met (Deutscher Wetterdienst)
  - show wave forecast from pc_met (Deutscher Wetterdienst)
* calculations
  - merge redundant waves
  - task restart
* tracking
  - use DNS to resolve SkyLines server IP (#2604)
  - enable SkyLines traffic display on Windows
* analysis
  - enhanced graphics: minor tics, color scheme, layout
  - key labels drawn on lines in several pages
  - task turnpoint label drawn on relevant pages
  - barogram: improved working band ceiling and floor calculation
  - climb history: new display uses time of climb as width of bars
  - new page: vario histogram in climb and cruise mode
  - new page: maccready cross-country speed
  - glide polar: dolphin speed line drawn on polar
* map display
  - new display: glide range line drawn to working floor
* thermal band
  - new algorithm, with improved statistics
  - separate active climb and encounter-averaged bands
* infoboxes
  - added ":1" unit for gradient type displays
  - new infobox: % time non-circling climb
  - new infobox: % climb chart showing proportions of time spent circling climb (gray), cruise,
      climbing cruise (green), circling non-climb (orange)
  - improved auto-scaling of vario-like graphical infoboxes
* Windows
  - drop support for Windows CE
  - require Windows Vista or later
  - allow starting multiple XCSoar instances
* Linux
  - drop support for SDL 1.2
  - display rotation
* Android
  - drop support for ARMv6 CPUs
* Kobo
  - support Kobo Glo HD

Version 6.8.7 - 2016/08/12
* data files
  - fix freeze after loading malformed topography file
* tracking
  - SkyLines: fix SkyLines tracking on non-Android
  - SkyLines: fix two buffer overflow bugs
  - new client for the experimental "XCSoar Cloud"
* Android
  - remove the deprecated crash dumper

Version 6.8.6 - 2016/07/22
* calculations
  - show takeoff time after landing (#3786)
* user interface